--- a/index.html
+++ b/index.html
@@ -58,6 +58,23 @@
         padding: 20px;
         height: 100%;
       }
+
+      #ayy{     
+        position: fixed;
+        font-family: "Comic Sans MS";
+        width: 300px;
+        height: 250px;
+        bottom: -250px;
+        transition: bottom 15s ease;
+        background-repeat: repeat-x;
+        background-image: url("src/Alien_head.gif");    
+      }
+
+      #ayy p{
+        color: purple;
+        background: rgba(0,0,0,0);
+      }
+
       
     </style>
 </head>
@@ -76,6 +93,9 @@
           <div id="app"></div>
         </div>
       </div>
+    </div>
+    <div id="ayy">
+      <p >ayyyyyyyy lmao</p>
     </div>
     <script type="text/javascript" src="build/main.min.js"></script>
 </body>
