--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       }
 
       #ayy p{
-        color: purple;
+        color: magenta;
         background: rgba(0,0,0,0);
       }
 
@@ -85,7 +85,7 @@
           <circle cx="44" cy="14" r="5" fill="#ebcb8b" />
           <circle cx="64" cy="14" r="5" fill="#a3be8c" />
         </svg>
-        <p3 style={"color:white"}>Ramanjit's Website<p3>
+        <p3 style={"color:white"}>Raman@Website: ~/<p3>
       </div>
     <div class="container" id="main">
       <div class="holder">
