--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
           -webkit-box-shadow: 0px 0px 13px 0px rgba(50, 50, 50, 0.59);
           -moz-box-shadow:    0px 0px 13px 0px rgba(50, 50, 50, 0.59);
           box-shadow:         0px 0px 13px 0px rgba(50, 50, 50, 0.59);
-          overflow: hidden;
+          overflow-y: auto;
+          overflow-x: hidden;
       }
       .holder {
           overflow: auto;
+      }
+      ::-webkit-scrollbar {
+
+        color: wheat;
       }
       .prompt {
         color: black;
