got cena to reposition himself in life

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
           font-family: "Comic Sans MS";
           width: 370px;
           height: 340px;
-          bottom: -250px;
+          bottom: -350px;
           transition: bottom 10s ease;
           background-repeat: repeat-x;
           background-size: cover;
           background-image: url("src/cena2.png");    
-
+          z-index: -1;
       }
       #bar {
         height: 30px;
@@ -122,7 +122,7 @@
     <div id="ayy">
       <p >ayyyyyyyy lmao</p>
     </div>
-    <div id='theCena'></div>
+    <div class="container" id='theCena'></div>
     <script type="text/javascript" src="build/main.min.js"></script>
 </body>
 </html>
