--- a/index.html
+++ b/index.html
@@ -102,27 +102,29 @@
     </style>
 </head>
 <body>
-  <div id="terminal">
-        <div id="bar" class='container'>
-          <svg height="20" width="100">
-            <circle cx="24" cy="14" r="5" fill="#bf616a" />
-            <circle cx="44" cy="14" r="5" fill="#ebcb8b" />
-            <circle cx="64" cy="14" r="5" fill="#a3be8c" />
-          </svg>
-          <p3 style={"color:white"}>Raman@Website: ~/<p3>
-        </div>
-      <div class="container" id="main">
-        <div class="holder">
-          <div id="content">
-            <div id="app"></div>
+  <div id="termCena">
+    <div id="terminal">
+          <div id="bar" class='container'>
+            <svg height="20" width="100">
+              <circle cx="24" cy="14" r="5" fill="#bf616a" />
+              <circle cx="44" cy="14" r="5" fill="#ebcb8b" />
+              <circle cx="64" cy="14" r="5" fill="#a3be8c" />
+            </svg>
+            <p3 style={"color:white"}>Raman@Website: ~/<p3>
+          </div>
+        <div class="container" id="main">
+          <div class="holder">
+            <div id="content">
+              <div id="app"></div>
+            </div>
           </div>
         </div>
-      </div>
-  </div>
-    <div id="ayy">
-      <p >ayyyyyyyy lmao</p>
     </div>
     <div class="container" id='theCena'></div>
-    <script type="text/javascript" src="build/main.min.js"></script>
+  </div>
+  <div id="ayy">
+    <p >ayyyyyyyy lmao</p>
+  </div>
+  <script type="text/javascript" src="build/main.min.js"></script>
 </body>
 </html>
