polished the cena command to flow better

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         font-size: 14px;
         color: #dfe1e8;
         background: #343d46;
+        overflow: hidden;
       }
       #app, div.input-area {
         height: 100%;
@@ -60,7 +61,7 @@
           width: 370px;
           height: 340px;
           bottom: -350px;
-          transition: bottom 10s ease;
+          transition: all 8s ease;
           background-repeat: repeat-x;
           background-size: cover;
           background-image: url("src/cena2.png");    
